--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-    "name": "sif-common-utils",
+    "name": "sif-common-dates",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "iso8601-duration": "^1.3.0",
+        "lodash.uniq": "^4.5.0"
+    },
+    "devDependencies": {
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
@@ -11,17 +15,6 @@
         "@types/node": "^17.0.0",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
-        "dayjs": "^1.10.7",
-        "iso8601-duration": "^1.3.0",
-        "lodash.uniq": "^4.5.0",
-        "npm-run-all": "^4.1.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-scripts": "5.0.0",
-        "typescript": "^4.5.4",
-        "web-vitals": "^2.1.2"
-    },
-    "devDependencies": {
         "eslint": "^8.4.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -29,7 +22,16 @@
         "eslint-plugin-react": "7.27.1",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-webpack-plugin": "^3.1.1",
-        "prettier": "^2.5.1"
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.5.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "5.0.0",
+        "typescript": "^4.5.4",
+        "web-vitals": "^2.1.2"
+    },
+    "peerDependencies": {
+        "dayjs": "^1.10.7"
     },
     "scripts": {
         "start": "react-scripts start",
