--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/node": "^17.0.0",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "dayjs": "^1.10.7",
         "eslint": "^8.4.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -27,6 +28,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
+        "ts-jest": "^27.1.2",
         "typescript": "^4.5.4",
         "web-vitals": "^2.1.2"
     },
@@ -58,6 +60,11 @@
             "last 1 chrome version",
             "last 1 firefox version",
             "last 1 safari version"
+        ]
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/sif-common-dates/**/*.ts"
         ]
     }
 }
