--- a/tsconfig-build-lib.json
+++ b/tsconfig-build-lib.json
@@ -19,8 +19,8 @@
         "declaration": true,
         "moduleResolution": "node",
         "noEmit": false,
-        "baseUrl": "./src/sif-common-dates"
+        "baseUrl": "./src/sif-common-utils"
     },
-    "include": ["src/sif-common-dates"],
+    "include": ["src/sif-common-utils"],
     "exclude": ["node_modules", "src/dev"]
 }
