--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "homepage": "https://navikt.github.io/sif-common-utils",
     "dependencies": {
         "iso8601-duration": "^1.3.0",
-        "lodash.uniq": "^4.5.0"
+        "lodash.uniq": "^4.5.0",
+        "snyk": "^1.803.0"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.1",
@@ -63,7 +64,9 @@
         "eject": "react-scripts eject",
         "build-lib": "npm-run-all clean-lib compile-lib-script",
         "clean-lib": "rimraf ./lib",
-        "compile-lib-script": "tsc -p tsconfig-build-lib.json"
+        "compile-lib-script": "tsc -p tsconfig-build-lib.json",
+        "snyk-protect": "snyk protect",
+        "prepare": "npm run snyk-protect"
     },
     "eslintConfig": {
         "extends": [
@@ -82,5 +85,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "snyk": true
 }
