--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "homepage": "https://navikt.github.io/sif-common-utils",
     "dependencies": {
         "iso8601-duration": "^1.3.0",
-        "lodash.uniq": "^4.5.0",
-        "snyk": "^1.806.0"
+        "lodash.uniq": "^4.5.0"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.1",
@@ -48,6 +47,7 @@
         "prettier": "^2.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "snyk": "^1.806.0",
         "react-scripts": "5.0.0",
         "ts-jest": "^27.1.2",
         "typescript": "^4.5.4",
