--- a/package.json
+++ b/package.json
@@ -28,63 +28,41 @@
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.2",
-        "@testing-library/react": "^12.1.2",
+        "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.4.0",
+        "@types/jest": "^27.4.1",
         "@types/lodash.uniq": "^4.5.6",
-        "@types/node": "^17.0.17",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
-        "dayjs": "^1.10.7",
-        "eslint": "^8.8.0",
-        "eslint-config-prettier": "^8.3.0",
+        "@types/node": "^17.0.22",
+        "@types/react": "^17.0.41",
+        "@types/react-dom": "^17.0.14",
+        "dayjs": "^1.11.0",
+        "eslint": "^8.11.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "7.28.0",
+        "eslint-plugin-react": "7.29.4",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-webpack-plugin": "^3.1.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.5.1",
+        "prettier": "^2.6.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "snyk": "^1.851.0",
-        "react-scripts": "5.0.0",
+        "snyk": "^1.880.0",
         "ts-jest": "^27.1.3",
-        "typescript": "^4.5.5",
+        "typescript": "^4.6.2",
         "web-vitals": "^2.1.4"
     },
     "peerDependencies": {
-        "dayjs": "^1.10.7"
+        "dayjs": "1.10.x"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest  --config ./jest/jest.config.js --watch",
         "test-c": "jest  --coverage --config ./jest/jest.config.js --watch",
-        "eject": "react-scripts eject",
         "build-lib": "npm-run-all clean-lib compile-lib-script",
         "clean-lib": "rimraf ./lib",
         "compile-lib-script": "tsc -p tsconfig-build-lib.json",
         "snyk-protect": "snyk protect",
         "prepare": "npm run snyk-protect"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
     },
     "snyk": true
 }
