--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@navikt/sif-common-utils",
-    "version": "3.1.3",
+    "version": "3.1.1",
     "private": false,
     "main": "lib/index.js",
     "types": "lib/index.d.js",
@@ -53,7 +53,7 @@
         "web-vitals": "^2.1.4"
     },
     "peerDependencies": {
-        "dayjs": "1.x"
+        "dayjs": "^1.11.x"
     },
     "scripts": {
         "test": "jest  --config ./jest/jest.config.js --watch",
