--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@navikt/sif-common-utils",
-    "version": "3.1.4",
+    "version": "3.1.5-beta.0",
     "private": false,
     "main": "lib/index.js",
     "types": "lib/index.d.js",
@@ -27,6 +27,10 @@
         "lodash.uniq": "^4.5.0"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+        "@babel/plugin-transform-modules-commonjs": "^7.17.7",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
