--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@navikt/sif-common-utils",
-    "version": "3.1.5-beta.0",
+    "version": "3.2.0",
     "private": false,
     "main": "lib/index.js",
     "types": "lib/index.d.js",
