--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react-dom": "^17.0.2",
         "snyk": "^1.880.0",
         "ts-jest": "^27.1.3",
+        "typedoc": "^0.22.15",
         "typescript": "^4.6.2",
         "web-vitals": "^2.1.4"
     },
